# opencensus-proto

./: .gitignore  .travis.yml  BUILD  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASING.md  WORKSPACE  build.gradle  census.proto  census_context.proto  go.mod  go.sum  mkgo.sh  mkgogen.sh  pom.xml  settings.gradle
.github/: dependabot.yml
gen-go/agent/common/v1/: BUILD.bazel  common.pb.go
gen-go/agent/metrics/v1/: BUILD.bazel  metrics_service.pb.go  metrics_service.pb.gw.go
gen-go/agent/trace/v1/: BUILD.bazel  trace_service.pb.go  trace_service.pb.gw.go
gen-go/exporterproto/: exporter.pb.go  exporter.pb.gw.go
gen-go/exportproto/: export.pb.go
gen-go/metrics/v1/: BUILD.bazel  metrics.pb.go
gen-go/metricsproto/: metrics.pb.go
gen-go/resource/v1/: BUILD.bazel  resource.pb.go
gen-go/stats/v1/: BUILD.bazel  stats.pb.go
gen-go/statsproto/: doc.go  stats.pb.go
gen-go/statsproto/github.com/census-instrumentation/opencensus-proto/gen-go/stats/: stats.pb.go
gen-go/statsproto/metricsproto/: metrics.pb.go
gen-go/trace/v1/: BUILD.bazel  trace.pb.go  trace_config.pb.go
gen-go/traceproto/: doc.go  trace.pb.go
gen-openapi/opencensus/proto/agent/metrics/v1/: metrics_service.swagger.json
gen-openapi/opencensus/proto/agent/trace/v1/: trace_service.swagger.json
gen-openapi/opencensus/proto/exporter/: exporter.swagger.json
gen-python/: setup.py  version.py
gen-python/opencensus/proto/agent/common/v1/: common_pb2.py
gen-python/opencensus/proto/agent/metrics/v1/: metrics_service_pb2.py  metrics_service_pb2_grpc.py
gen-python/opencensus/proto/agent/trace/v1/: trace_service_pb2.py  trace_service_pb2_grpc.py
gen-python/opencensus/proto/metrics/v1/: metrics_pb2.py
gen-python/opencensus/proto/resource/v1/: resource_pb2.py
gen-python/opencensus/proto/stats/v1/: stats_pb2.py
gen-python/opencensus/proto/trace/v1/: trace_config_pb2.py  trace_pb2.py
gen-ruby/opencensus/proto/agent/common/v1/: common_pb.rb
gen-ruby/opencensus/proto/agent/metrics/v1/: metrics_service_pb.rb  metrics_service_services_pb.rb
gen-ruby/opencensus/proto/agent/trace/v1/: trace_service_pb.rb  trace_service_services_pb.rb
gen-ruby/opencensus/proto/metrics/v1/: metrics_pb.rb
gen-ruby/opencensus/proto/resource/v1/: resource_pb.rb
gen-ruby/opencensus/proto/stats/v1/: stats_pb.rb
gen-ruby/opencensus/proto/trace/v1/: trace_config_pb.rb  trace_pb.rb
gradle/wrapper/: gradle-wrapper.properties
opencensus/proto/: mkgo.sh
opencensus/proto/agent/: BUILD.bazel  README.md
opencensus/proto/agent/common/v1/: BUILD.bazel  common.proto
opencensus/proto/agent/trace/v1/: BUILD.bazel  trace_service.proto
opencensus/proto/export/: BUILD.bazel  export.proto
opencensus/proto/exporter/: BUILD.bazel  exporter.proto  exporter_http.yaml
opencensus/proto/metrics/: BUILD.bazel  metrics.proto
opencensus/proto/metrics/v1/: metrics.proto
opencensus/proto/stats/: BUILD.bazel  stats.proto
opencensus/proto/stats/metrics/: BUILD.bazel  metrics.proto
opencensus/proto/trace/: BUILD.bazel  trace.proto  trace_config.proto
opencensus/proto/trace/v1/: trace.proto
src/: WORKSPACE  install-protoc.sh  mkgogen.sh  mkgogogen.sh
src/opencensus/proto/agent/: README.md
src/opencensus/proto/agent/common/v1/: BUILD.bazel  common.proto
src/opencensus/proto/agent/error/: BUILD.bazel  error_service.proto
src/opencensus/proto/agent/error/v1/: BUILD.bazel
src/opencensus/proto/agent/metrics/v1/: BUILD.bazel  metrics_service.proto
src/opencensus/proto/agent/trace/v1/: BUILD.bazel  trace_service.proto  trace_service_http.yaml
src/opencensus/proto/error/v1/: BUILD.bazel  error.proto  error_config.proto
src/opencensus/proto/metrics/v1/: BUILD.bazel  metrics.proto
src/opencensus/proto/resource/v1/: BUILD.bazel
src/opencensus/proto/stats/v1/: BUILD.bazel  stats.proto
src/opencensus/proto/tags/v1/: BUILD.bazel  tags.proto
src/opencensus/proto/trace/v1/: BUILD.bazel  trace.proto  trace_config.proto
src/opencensus/proto/web/v1/: BUILD.bazel  README.md  web.proto
stats/: BUILD  BUILD.bazel  census.proto  rpc_constants.pb  rpc_constants.textpb  stats.proto  stats_context.proto  view_descriptor_constants.proto
trace/: BUILD.bazel  span.proto  span_context.proto  trace.proto
