# Copyright 2018, OpenCensus Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_rules_dependencies", "go_register_toolchains")

proto_library(
    name = "export_proto",
    srcs = ["export.proto"],
    deps = [
        "//opencensus/proto/trace:trace_proto",
    ],
)

cc_proto_library(
    name = "export_proto_cc",
    deps = [":export_proto"],
)

java_proto_library(
    name = "export_proto_java",
    deps = [":export_proto"],
)

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "export_proto_go",
    importpath = "github.com/census-instrumentation/opencensus-proto/gen-go/exportproto",
    proto = ":export_proto",
    visibility = ["//visibility:public"],
)
