load("@io_bazel_rules_go//go:def.bzl", "go_library")

# Copyright 2017, OpenCensus Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "traceproto_proto",
    srcs = ["trace.proto"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

cc_proto_library(
    name = "trace_proto_cc",
    deps = [":traceproto_proto"],
)

java_proto_library(
    name = "trace_proto_java",
    deps = [":traceproto_proto"],
)

go_proto_library(
    name = "trace_proto_go",
    importpath = "github.com/census-instrumentation/opencensus-proto/gen-go/traceproto",
    proto = ":traceproto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":trace_proto_go"],
    importpath = "github.com/census-instrumentation/opencensus-proto/gen-go/traceproto",
)
