# Copyright 2018, OpenCensus Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "trace_service_proto",
    srcs = ["trace/v1/trace_service.proto"],
    deps = [
        ":common_proto",
        "//opencensus/proto/trace:trace_proto",
    ],
)

# TODO(songya): add metrics and stats services.

cc_proto_library(
    name = "trace_service_proto_cc",
    deps = [":trace_service_proto"],
)

java_proto_library(
    name = "trace_service_proto_java",
    deps = [":trace_service_proto"],
)

java_grpc_library(
    name = "trace_service_grpc_java",
    srcs = [":trace_service_proto"],
    deps = [":trace_service_proto_java"],
)
